--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -7,6 +7,8 @@
     <title th:text="${headerTitle}">Formicarium</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <link rel="stylesheet" th:href="@{/css/base.css}">
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
 </head>
@@ -36,7 +38,7 @@
                 <img src="../images/user_avatar.png" alt="User Avatar" class="user-avatar">
                 <span sec:authentication="name" class="user-name">User</span>
                 <form th:action="@{/logout}" method="post" class="logout-form">
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
                     <button type="submit" class="btn btn-sm btn-warning">Logout</button>
                 </form>
             </div>
