--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -36,7 +36,7 @@
         <img src="../images/user_avatar.png" alt="User Avatar" class="user-avatar">
         <span sec:authentication="name" class="user-name">newuser</span>
         <form th:action="@{/logout}" method="post" class="logout-form">
-          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
           <button type="submit" class="btn btn-sm btn-warning">Logout</button>
         </form>
       </div>
